force-app/main/default/objects/OpportunityContactRole/fields/GFWContactGiftIdsPair__c.field-meta.xml
<CustomField>
    <fullName>GFWContactGiftIdsPair__c</fullName>
    <description>External Ids for Contact and Gift used in sync to retrieve existing OpportunityContactRoles.</description>
    <formula>Contact.GFW_Contact_ID__c &amp; Opportunity.GFW_Gift_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GFWContactGiftIdsPair</label>
    <type>Text</type>
</CustomField>