force-app/main/default/objects/OpportunityContactRole/fields/HasAccountClash__c.field-meta.xml
<CustomField>
    <fullName>HasAccountClash__c</fullName>
    <description>True if Opportunity Account not equal to Contact&apos;s parent Account.</description>
    <formula>Opportunity.AccountId &lt;&gt; Contact.AccountId || 
Opportunity.Account.RecordType.DeveloperName &lt;&gt; &apos;HH_Account&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HasAccountClash</label>
    <type>Checkbox</type>
</CustomField>