force-app/main/default/objects/OpportunityContactRole/fields/Sync_Log_Record__c.field-meta.xml
<CustomField>
    <fullName>Sync_Log_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sync Log Record</label>
    <referenceTo>Sync_Log_Record__c</referenceTo>
    <relationshipLabel>Opportunity Contact Role</relationshipLabel>
    <relationshipName>Opportunity_Contact_Role</relationshipName>
    <type>Lookup</type>
</CustomField>